I added a quote and a table.

--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
-/* Name, Date */
+/* Joshua Velasquez, 12-18-24 */
+
+a Elon-Musk {
+    width: 450;
+    height: 600;
+}
+    table {
+    font-family:'Times New Roman', Times, serif, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+   
