--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ td {
     border:5px solid rgb(204, 100, 9);
     text-align:center;
     padding: 5px;
+    width: 50%;
 }
     
     tr:nth-child(even) {
