--- a/style.css
+++ b/style.css
@@ -3,24 +3,24 @@
 body{
     background:rgb(187, 233, 233);
     color:black;
-    text-align: center;
+    text-align:left;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:18px;
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     padding: 20px;
 }
     table {
     font-family:Arial, Helvetica, sans-serif;
     border-collapse:collapse;
-    width: 80%;
+    width: 50%;
 }
 
  tr {
     border: 5px solid red;
-    text-align: right;
+    text-align: center;
     padding: 7px;
 }
 
